# LillyMolVersion8

./: .dockerignore  .gitignore  Build.md  Dockerfile  Makefile  README.md  docker-compose.yml  run_python.sh
src/: .bazelrc  MODULE.bazel  WORKSPACE  build_linux.sh  c.smi  chiral.py  install.sh  run_python_unit_tests.sh  uncompress_and_install.sh  uninstall.sh
src/BerkeleyDB/: BUILD  iwbdb_cat.cc
src/Duplicates/: BUILD
src/Foundational/accumulator/: BUILD  accumulator.h  accumulator.proto
src/Foundational/data_source/: iwstring_data_source.cc  iwstring_data_source.h
src/Foundational/iw_tdt/: BUILD  fetch_tdt_quick.cc  tdt_stats.cc
src/Foundational/iwaray/: iwaray.h
src/Foundational/iwmisc/: BUILD  combinations.h  combinations_test.cc  normalisation.cc  normalisation.h  normalisation.proto  normalisation_test.cc  proto_support.h  sparse_fp_creator.cc  sparse_fp_creator.h  toml_support.h
src/Foundational/iwstring/: IWString_class.cc  iwstring.h  iwstring_and_file_descriptor.cc  iwstring_test.cc  string_relationals.cc  tsclass.cc
src/ILPD/: BUILD  ilpd_reduced_graph.cc  ilpd_reduced_graph.proto
src/Molecule_Lib/: BUILD  _qry_wstats.cc  _substructure.cc  aromatic.cc  atom.cc  atom_typing.cc  charge_assigner.cc  charge_assigner.h  charge_assigner_test.cc  cis_trans_bond.cc  count_atoms_in_smiles.cc  csubstructure.cc  csv.cc  dihedral.cc  down_the_bond.cc  ematch.cc  geometric_constraints.proto  is_actually_chiral.cc  istream_and_type.h  iwmtypes.h  iwreaction.cc  iwreaction.h  iwsubstructure.cc  kabsch_test.cc  linear_fingerprint_test.cc  misc2.h  molecular_formula.cc  molecular_formula.h  molecule.cc  molecule.h  molecule_test.cc  moleculeio.cc  moleculeio.h  moleculer.cc  moleculer_test.cc  ostream_and_type.cc  ostream_and_type.h  output.cc  path.cc  path_scoring.cc  (+36 more)
src/Molecule_Tools/: BUILD  SAFE_generate.cc  activity_consistency.cc  aggregate_replacement_rings.cc  alogp.cc  alogp.h  alogp.proto  alogp_main.cc  alogp_test.cc  atomic_distance_fingerprint.cc  bump_check.cc  centroid_atoms.cc  chirality_fingerprint.cc  common_names.cc  complex_chirality.cc  dbf.cc  dbf.proto  dicer.cc  dicer_fragment_activity.cc  dicer_fragment_overlap.cc  dicer_fragment_replace.cc  dicer_fragments.proto  dicer_mcs.cc  dicer_to_topological_types.cc  echoqry.cc  enumeration.cc  fileconv_opts.cc  fileconv_opts.h  fileconv_test.cc  fingerprint_substructure.cc  formula_fingerprint.cc  formula_groupings.cc  fragment_molecule.cc  get_linkers.cc  get_substituents.cc  grep_molecule.cc  grid_fingerprint.cc  iwdemerit.cc  iwdescr.cc  iwecfp.cc  (+85 more)
src/Molecule_Tools_Bdb/: BUILD  dicer2bdb.cc  dicer_fragment_complement.proto  dicer_fragment_complement_replace.cc  dicer_fragment_lookup_bdb.cc  dicer_to_complemenent_db.cc  in_database_bdb.cc  iwecfp_database.cc  iwecfp_database.h  qupkake_transfer.cc  qupkake_transfer.proto  smi2rings_bdb.cc  substituent_identification.cc
src/Obsolete/: BUILD  alogp_optimise.cc  descriptor_file_to_01_fingerprints.cc  gfp_linear_model.cc  gfp_linear_model.proto  gfp_linear_model_optimise.cc  gfp_svmfp_score_pthread.cc  subset_of_interest.cc  subset_of_interest.h  subset_of_interest.py
src/Obsolete/Descriptor_Similarity/: BUILD  descriptor_file_to_distance_matrix.cc
src/Obsolete/Distance_Matrix/: BUILD  distance_matrix_activity_difference.cc  distance_matrix_from_distances.cc  distance_matrix_kmedioids.cc  distance_matrix_leader.cc  distance_matrix_simple_cluster.cc  distance_matrix_to_distances.cc  gfp_distance_matrix_iwdm.cc
src/Utilities/GFP_Knn/: BUILD  nn_results.h  nn_results_.h  prediction_weight_function.cc
src/Utilities/GFP_Tools/: BUILD  gfp_leader_tbb.cc  gfp_lnearneighbours.cc  gfp_lnearneighbours_standard.cc  gfp_nearneighbours_single_file.cc  gfp_spread.cc  gfp_spread_omp.cc  gfp_spread_standard.cc  gfp_svmfp_score.cc  gfp_svmfp_score_tbb.cc  gfp_to_descriptors_multiple.cc  iwstats.cc  model_uncertainty.cc  nearneighbours.proto  nn2proto.cc  nn_id_to_ndx.cc  nn_leader_and_jp.cc  nn_spread.cc  rescaling.proto  spread.cc  spread_weights.cc  spread_weights.h
src/Utilities/GeneExpression/: BUILD
src/Utilities/General/: BUILD  concat_files.cc  descriptor_file_sort.cc  descriptors_to_fingerprint.cc  descriptors_to_fingerprint_integer.cc  dicer_fragments_collate.cc  feature_scaling.cc  feature_scaling.proto  fetch_smiles_quick.cc  iwcut.cc  iwsplit.cc  tcount.cc  (+11 more)
src/build_deps/: install.bzl
src/go/: mass_grouping.go
src/pybind/: BUILD  lillymol_pybind.cc  lillymol_pybind_reaction.cc  lillymol_test.py
src/xgboost/: BUILD  xgboost_model_evaluate.cc
(+899 files in other folders)
